<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_margin"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/display_name"
            android:text="@string/options_display_name" />

        <EditText
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColor="@color/editPrimary" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:labelFor="@id/birth_date"
            android:text="@string/options_birth_date" />

        <EditText
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColor="@color/editPrimary" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:labelFor="@id/vMeasure"
            android:text="@string/options_system_of_measurement" />

        <RadioGroup
            android:id="@+id/vMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/measure_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/options_system_of_measurement_metric"
                android:textColor="@color/editPrimary" />

            <RadioButton
                android:id="@+id/measure_imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin"
                android:text="@string/options_system_of_measurement_imperial"
                android:textColor="@color/editPrimary" />
        </RadioGroup>

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:labelFor="@id/vSex"
            android:text="@string/options_sex" />

        <RadioGroup
            android:id="@+id/vSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/vSexMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/options_sex_male"
                android:textColor="@color/editPrimary" />

            <RadioButton
                android:id="@+id/sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin"
                android:text="@string/options_sex_female"
                android:textColor="@color/editPrimary" />
        </RadioGroup>

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:labelFor="@id/user_weight"
            android:text="@string/options_weight" />

        <com.nmarsollier.fitfat.ui.editMeasure.ui.PrefixSuffixEditText
            android:id="@+id/user_weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/editPrimary"
            app:innerPadding="4dp"
            app:suffix="kg"
            tools:text="99" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:labelFor="@id/user_height"
            android:text="@string/options_height" />

        <com.nmarsollier.fitfat.ui.editMeasure.ui.PrefixSuffixEditText
            android:id="@+id/user_height"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/editPrimary"
            app:innerPadding="4dp"
            app:suffix="cm"
            tools:text="180" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/save_on_cloud"
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/save_my_data_in_cloud" />

    </LinearLayout>
</ScrollView>
